# hasura-authenticationwebhook-rolemapping-service/src/models.py
@@ -55,9 +55,6 @@ class Role(BaseModel):
     component_id: str = Field(
         ..., description="Component id in Witboost", example="urn:dmb:cmp:dom1:dp1:0:op"
     )
-    graphql_root_field_name: str = Field(
-        ..., description="GraphQL root field name in Hasura", example="dom1_dp1_0_op"
-    )
 
 
 class UserRoleMappings(BaseModel):
@@ -71,6 +68,18 @@ class GroupRoleMappings(BaseModel):
     role_id: str = Field(..., description="Role id", example="dom1.dp1.0.op.readrole")
     groups: List[str] = Field(
         ..., description="Group list", example=["group:group1", "group:group2"]
+    )
+
+
+class GraphqlRootFieldNameRoleMappings(BaseModel):
+    role_id: str = Field(..., description="Role id", example="dom1.dp1.0.op.readrole")
+    component_id: str = Field(
+        ..., description="Component id in Witboost", example="urn:dmb:cmp:dom1:dp1:0:op"
+    )
+    graphql_root_field_names: List[str] = Field(
+        ...,
+        description="Root field name list",
+        example=["dom1_dp1_0_op1_select", "dom1_dp1_0_op1_aggregate"],
     )
 
 
